--- a/static/styles.css
+++ b/static/styles.css
@@ -4167,6 +4167,7 @@ img {
 }
 
 .page {
+  position: relative;
   font-family: "Times New Roman", Times, serif;
   font-size: 14pt;
   line-height: 1.5;
@@ -4179,24 +4180,77 @@ img {
 }
 .page__field {
   text-align: center;
+  line-height: 1.2;
 }
-
-.work-time-decanat {
-  border: 2px solid #000;
+.page__number {
+  font-size: 16pt;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin: 0 0 1cm -1.5cm;
+}
+.page__title {
+  text-align: center;
   font-size: 16pt;
   font-weight: bolder;
+  line-height: 1.2;
+}
+.page__title_uppercase {
+  text-transform: uppercase;
+}
+.page__list {
+  font-size: 14pt;
+}
+
+.bordered-block {
+  border: 2px solid #000;
   text-align: center;
-  padding: 6pt 0;
+  padding: 6pt 18pt;
+  width: fit-content;
+  margin: 0 auto;
+}
+.bordered-block_5pt {
+  font-size: 5pt;
+}
+.bordered-block_10pt {
+  font-size: 10pt;
+}
+.bordered-block_16pt {
+  font-size: 16pt;
+}
+.bordered-block_bold {
+  font-weight: bolder;
+}
+.bordered-block_mt-10px {
+  margin-top: 10px;
+}
+.bordered-block_p-4 {
+  padding: 8pt;
+}
+.bordered-block_leading-1 {
+  line-height: 1.2;
+}
+.bordered-block_justify {
+  text-align: justify;
 }
 
 .list {
   padding-inline-start: 0;
-  line-height: 1;
+  line-height: 1.1;
   text-align: justify;
   list-style: decimal inside;
+  display: inline;
 }
 .list__item {
   text-indent: 1cm;
+}
+.list__item_tab {
+  padding-inline-start: 40px;
+}
+.list_dash {
+  list-style-type: "-";
 }
 
 .top-title {
@@ -4215,12 +4269,11 @@ img {
   font-size: 28pt;
 }
 
-.page__title {
+.text_center {
   text-align: center;
-  font-size: 16pt;
-  font-weight: bolder;
 }
 
-.page__list {
-  font-size: 14pt;
+.center {
+  display: flex;
+  justify-content: center;
 }
