--- a/static/styles.css
+++ b/static/styles.css
@@ -4192,6 +4192,7 @@ img {
   margin: 0 0 1cm -1.5cm;
 }
 .page__title {
+  margin-bottom: 10pt;
   text-align: center;
   font-size: 16pt;
   font-weight: bolder;
@@ -4200,8 +4201,22 @@ img {
 .page__title_uppercase {
   text-transform: uppercase;
 }
+.page__title_font-weight-normal {
+  font-weight: normal;
+}
+.page__title_mb-0 {
+  margin-bottom: 0;
+}
 .page__list {
   font-size: 14pt;
+}
+
+.text_center {
+  text-align: center;
+}
+.text_right {
+  text-align: right;
+  padding-right: 5px;
 }
 
 .bordered-block {
@@ -4253,6 +4268,67 @@ img {
   list-style-type: "-";
 }
 
+.table {
+  width: 100%;
+  font-size: 16pt;
+  line-height: 1;
+  border-collapse: collapse;
+  table-layout: fixed;
+}
+.table th {
+  padding: 0;
+  font-weight: normal;
+  text-align: center;
+  vertical-align: middle;
+  border: 1px solid #000;
+}
+.table td {
+  border: 1px solid #000;
+  padding: 0;
+  position: relative;
+}
+.table tr {
+  height: 24px;
+}
+.table__bottom-cell {
+  font-size: 10pt;
+  position: absolute;
+  bottom: 3px;
+  left: 3px;
+}
+.table__top-cell {
+  font-size: 10pt;
+  position: absolute;
+  top: 3px;
+  right: 3px;
+}
+.table__diagonal-line {
+  position: absolute;
+  top: 50%;
+  left: -3px;
+  width: calc(100% + 5px);
+  border: black 0.5px solid;
+  transform: rotate(15deg);
+}
+.table_text-12pt {
+  font-size: 12pt;
+}
+.table_h-42px tr {
+  height: 42px;
+}
+.table tr.vertical {
+  font-size: 7pt;
+}
+.table tr.vertical p {
+  margin-block-start: 0;
+  margin-block-end: 0;
+  writing-mode: tb-rl;
+  transform: rotate(180deg);
+}
+.table tr._10pt th {
+  font-size: 10pt;
+}
+
 .top-title {
   margin-block: 0;
   font-size: 14pt;
@@ -4267,10 +4343,6 @@ img {
 }
 .main-title_large-string {
   font-size: 28pt;
-}
-
-.text_center {
-  text-align: center;
 }
 
 .center {
